# qwertzysynth

./: CMakeLists.txt  README.md
embed/: CMakeLists.txt  embed.cmake  embed.cpp.in
include/: accordeon.hpp  app.hpp  audio.hpp  cli.hpp  if_guard.hpp  imgui.hpp  input.hpp  keyboard.hpp  keyboard_input.hpp  libsynth.hpp  lockfree-ring-queue.hpp  log.hpp  non_copyable.hpp  note.h  note.hpp  padme.hpp  piano.hpp  render.hpp  scope_guard.h  scope_guard.hpp  singleton_wrapper.hpp  state.h  synth.h  synth.hpp  util.hpp
lib/: CMakeLists.txt
lib/cxx_lockfree_ring_queue/: CMakeLists.txt  lazy_constructed.hpp  lockfree_ring_queue.hpp
lib/imgui/: CMakeLists.txt
src/: accordeon.cpp  app.cpp  audio.cpp  cli.cpp  imgui.cpp  input.cpp  keyboard.cpp  keyboard_input.cpp  main.cpp  padme.cpp  piano.cpp  render.cpp  synth.cpp
